--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^9.37.0",
     "jiti": "^2.6.1",
     "jsdom": "^27.0.0",
+    "tsdown": "^0.15.6",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@7.1.14",
     "vitest": "^3.2.4",
