--- a/packages/antdv-next/package.json
+++ b/packages/antdv-next/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@ant-design/colors": "^7.2.1",
     "@ant-design/fast-color": "^3.0.0",
+    "@antdv-next/cssinjs": "workspace:^",
     "@v-c/util": "^0.0.7"
   }
 }
