chore: add docs

--- a/packages/antdv-next/package.json
+++ b/packages/antdv-next/package.json
@@ -21,8 +21,8 @@
     "@v-c/image": "^0.0.1",
     "@v-c/input": "^1.0.0",
     "@v-c/input-number": "^1.0.0",
+    "@v-c/mentions": "^0.0.1",
     "@v-c/menu": "^1.0.1",
-    "@v-c/metions": "link:/Users/yanyu/workspace/github/antdv-next/vue-components/packages/mentions",
     "@v-c/mutate-observer": "catalog:",
     "@v-c/notification": "^0.0.2",
     "@v-c/pagination": "^0.0.1",
@@ -36,7 +36,7 @@
     "@v-c/steps": "^0.0.1",
     "@v-c/switch": "^0.0.1",
     "@v-c/tabs": "^0.0.3",
-    "@v-c/textarea": "^1.0.0",
+    "@v-c/textarea": "^1.0.1",
     "@v-c/tooltip": "^1.0.1",
     "@v-c/tour": "^1.0.1",
     "@v-c/tree": "^0.0.1",
