chore: add docs

--- a/playground/package.json
+++ b/playground/package.json
@@ -12,6 +12,7 @@
     "@antdv-next/cssinjs": "workspace:^",
     "@antdv-next/icons": "workspace:^",
     "@antdv-next/unocss": "workspace:^",
+    "@vueuse/core": "catalog:",
     "antdv-next": "workspace:^",
     "es-toolkit": "catalog:",
     "pinia": "catalog:",
