--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -24,7 +24,7 @@ catalog:
   '@vitejs/plugin-vue-jsx': ^5.1.2
   '@vue/test-utils': ^2.4.6
   '@vue/tsconfig': ^0.8.1
-  '@vueuse/core': ^13.9.0
+  '@vueuse/core': 13.9.0
   csstype: ^3.2.3
   defu: ^6.1.4
   es-toolkit: 1.43.0
