--- a/packages/antdv-next/package.json
+++ b/packages/antdv-next/package.json
@@ -46,6 +46,7 @@
     "build": "run-s build:esm build:umd",
     "build:esm": "tsdown",
     "build:umd": "vite build",
+    "prepublish": "pnppm build",
     "bump": "bumpp --commit \"chore(release): antdv-next %s\" --push --tag \"antdv-next@%s\""
   },
   "dependencies": {
