--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jsdom": "catalog:types",
     "@types/markdown-it": "catalog:types",
     "@types/node": "catalog:types",
+    "@v-c/portal": "catalog:vc",
     "@v-c/resize-observer": "catalog:vc",
     "@v-c/trigger": "catalog:vc",
     "@v-c/util": "catalog:vc",
