--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,6 +7,12 @@ packages:
   - packages/*
   - playground
 
+overrides:
+  '@v-c/portal': catalog:vc
+  '@v-c/resize-observer': catalog:vc
+  '@v-c/trigger': catalog:vc
+  '@v-c/util': catalog:vc
+  vite: catalog:dev
 catalogs:
   dev:
     '@antfu/eslint-config': ^7.2.0
@@ -19,12 +25,12 @@ catalogs:
     bumpp: ^10.3.2
     chalk: ^5.6.2
     cli-progress: ^3.12.0
-    typedoc: ^0.28.16
-    fs-extra: ^11.3.3
     cross-env: ^10.1.0
     eslint: ^9.39.2
     eslint-plugin-format: ^1.1.0
     esno: 4.8.0
+    fs-extra: ^11.3.3
+
     jiti: ^2.6.1
     jsdom: ^27.3.0
     less: ^4.5.1
@@ -35,6 +41,7 @@ catalogs:
     tinyglobby: 0.2.15
     tsdown: ^0.20.1
     turbo: ^2.7.2
+    typedoc: ^0.28.16
     typescript: ~5.9.3
     unocss: ^66.5.10
     vite: ^8.0.0-beta.8
@@ -53,6 +60,7 @@ catalogs:
     '@shikijs/markdown-it': ^3.20.0
     '@shikijs/transformers': ^3.20.0
     '@shikijs/twoslash': ^3.20.0
+    '@stackblitz/sdk': ^1.11.0
     markdown-it: 14.1.0
     markdown-it-anchor: ^9.2.0
     markdown-it-async: ^2.2.0
@@ -90,11 +98,11 @@ catalogs:
     vue: ^3.5.27
     vue-router: ^4.6.4
   types:
-    '@types/jsdom': ^27.0.0
+    '@types/cli-progress': ^3.11.6
     '@types/fs-extra': ^11.0.4
+    '@types/jsdom': ^27.0.0
     '@types/markdown-it': 14.1.2
     '@types/markdown-it-attrs': ^4.1.3
-    '@types/cli-progress': ^3.11.6
     '@types/markdown-it-container': ^2.0.11
     '@types/node': ^25.0.10
     '@types/picomatch': ^4.0.2
@@ -145,10 +153,3 @@ catalogs:
 onlyBuiltDependencies:
   - esbuild
   - less
-
-overrides:
-  '@v-c/portal': catalog:vc
-  '@v-c/resize-observer': catalog:vc
-  '@v-c/trigger': catalog:vc
-  '@v-c/util': catalog:vc
-  vite: catalog:dev
