feat: sync antd style

--- a/packages/antdv-next/package.json
+++ b/packages/antdv-next/package.json
@@ -155,6 +155,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/throttle-debounce": "catalog:types"
+    "@types/throttle-debounce": "catalog:types",
+    "csstype": "catalog:prod"
   }
 }
