docs: support sponsor (#208)
* docs: support sponsor

* chore: update docs

* chore: fix support header active key

--- a/packages/antdv-next/package.json
+++ b/packages/antdv-next/package.json
@@ -76,8 +76,11 @@
     "./web-tags.json": "./web-tags.json",
     "./package.json": "./package.json"
   },
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "unpkg": "dist/antd.js",
   "jsdelivr": "dist/antd.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "README.md",
     "dist",
